2011-05-10  MORITA Hajime  <morrita@google.com>

        Reviewed by Kent Tamura.

        Crashes if the document inside iframe is removed during pasting some text into it.
        https://bugs.webkit.org/show_bug.cgi?id=60534

        * editing/pasteboard/paste-removing-iframe-expected.txt: Added.
        * editing/pasteboard/paste-removing-iframe.html: Added.
        * editing/pasteboard/resources/paste-removing-iframe-child.html: Added.

2011-05-08  Dan Bernstein  <mitz@apple.com>

        Reviewed by Darin Adler.

        <rdar://problem/9401853> REGRESSION (r78846): Insufficient expansion for justification when there are multiple inline boxes
        https://bugs.webkit.org/show_bug.cgi?id=60432

        * fast/text/justify-nbsp-expected.png:
        * fast/text/justify-nbsp-expected.txt:
        * platform/mac-snowleopard/fast/text/justify-ideograph-leading-expansion-expected.txt:
        * platform/mac/css1/box_properties/clear_float-expected.png:
        * platform/mac/css1/box_properties/clear_float-expected.txt:
        * platform/mac/css1/box_properties/float_on_text_elements-expected.txt:
        * platform/mac/css2.1/t0905-c5525-fltcont-00-d-g-expected.png:
        * platform/mac/css2.1/t0905-c5525-fltcont-00-d-g-expected.txt:
        * platform/mac/css2.1/t0905-c5525-fltwidth-00-c-g-expected.png:
        * platform/mac/css2.1/t0905-c5525-fltwidth-00-c-g-expected.txt:
        * platform/mac/css2.1/t1602-c546-txt-align-00-b-expected.png:
        * platform/mac/css2.1/t1602-c546-txt-align-00-b-expected.txt:
        * platform/mac/fast/multicol/float-avoidance-expected.png:
        * platform/mac/fast/multicol/float-avoidance-expected.txt:
        * platform/mac/fast/multicol/vertical-lr/float-avoidance-expected.png:
        * platform/mac/fast/multicol/vertical-lr/float-avoidance-expected.txt:
        * platform/mac/fast/multicol/vertical-rl/float-avoidance-expected.png:
        * platform/mac/fast/multicol/vertical-rl/float-avoidance-expected.txt: